// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectPickerItems only with required props renders successfully if item does not exit: SelectPickerItems without item. 1`] = `
<View
  pointerEvents="box-none"
  style={
    {
      "alignItems": "center",
      "justifyContent": "center",
    }
  }
  testID="SelectPickerItems"
>
  <RCTScrollView
    CellRendererComponent={[Function]}
    centerContent={true}
    collapsable={false}
    contentContainerStyle={
      {
        "paddingVertical": 88,
      }
    }
    data={[]}
    decelerationRate={0.98}
    forwardedRef={[Function]}
    getItem={[Function]}
    getItemCount={[Function]}
    getItemLayout={[Function]}
    initialScrollIndex={null}
    jestAnimatedStyle={
      {
        "value": {},
      }
    }
    keyExtractor={[Function]}
    onContentSizeChange={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={1}
    showsVerticalScrollIndicator={false}
    snapToInterval={44}
    stickyHeaderIndices={[]}
    style={
      {
        "height": 220,
        "width": "100%",
      }
    }
    viewabilityConfigCallbackPairs={[]}
  >
    <View />
  </RCTScrollView>
  <View
    pointerEvents="none"
    style={
      {
        "bottom": 0,
        "height": 110,
        "position": "absolute",
        "width": "100%",
      }
    }
  >
    <Image
      resizeMode="stretch"
      source={1}
      style={
        {
          "height": 110,
          "width": "100%",
        }
      }
    />
  </View>
  <View
    pointerEvents="none"
    style={
      {
        "height": 110,
        "position": "absolute",
        "top": 0,
        "width": "100%",
      }
    }
  >
    <Image
      resizeMode="stretch"
      source={1}
      style={
        {
          "height": 110,
          "width": "100%",
        }
      }
    />
  </View>
  <View
    pointerEvents="none"
    style={
      {
        "backgroundColor": "rgba(0,0,0,0.06)",
        "borderColor": "grey",
        "borderRadius": 8,
        "height": 44,
        "position": "absolute",
        "width": "95%",
      }
    }
  />
</View>
`;

exports[`SelectPickerItems only with required props renders successfully with more than one item: SelectPickerItems with more than one item. 1`] = `
<View
  pointerEvents="box-none"
  style={
    {
      "alignItems": "center",
      "justifyContent": "center",
    }
  }
  testID="SelectPickerItems"
>
  <RCTScrollView
    CellRendererComponent={[Function]}
    centerContent={true}
    collapsable={false}
    contentContainerStyle={
      {
        "paddingVertical": 88,
      }
    }
    data={
      [
        {
          "label": "test1",
          "value": "1",
        },
        {
          "label": "test2",
          "value": "2",
        },
      ]
    }
    decelerationRate={0.98}
    forwardedRef={[Function]}
    getItem={[Function]}
    getItemCount={[Function]}
    getItemLayout={[Function]}
    initialScrollIndex={0}
    jestAnimatedStyle={
      {
        "value": {},
      }
    }
    keyExtractor={[Function]}
    onContentSizeChange={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={1}
    showsVerticalScrollIndicator={false}
    snapToInterval={44}
    stickyHeaderIndices={[]}
    style={
      {
        "height": 220,
        "width": "100%",
      }
    }
    viewabilityConfigCallbackPairs={[]}
  >
    <View>
      <View
        collapsable={false}
        jestAnimatedStyle={
          {
            "value": {},
          }
        }
        style={{}}
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "height": 44,
              "justifyContent": "center",
            }
          }
        >
          <Text
            style={
              {
                "fontSize": 20,
              }
            }
            testID="-0"
          >
            test1
          </Text>
        </View>
      </View>
      <View
        collapsable={false}
        jestAnimatedStyle={
          {
            "value": {},
          }
        }
        style={{}}
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "height": 44,
              "justifyContent": "center",
            }
          }
        >
          <Text
            style={
              {
                "fontSize": 20,
              }
            }
            testID="-1"
          >
            test2
          </Text>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <View
    pointerEvents="none"
    style={
      {
        "bottom": 0,
        "height": 110,
        "position": "absolute",
        "width": "100%",
      }
    }
  >
    <Image
      resizeMode="stretch"
      source={1}
      style={
        {
          "height": 110,
          "width": "100%",
        }
      }
    />
  </View>
  <View
    pointerEvents="none"
    style={
      {
        "height": 110,
        "position": "absolute",
        "top": 0,
        "width": "100%",
      }
    }
  >
    <Image
      resizeMode="stretch"
      source={1}
      style={
        {
          "height": 110,
          "width": "100%",
        }
      }
    />
  </View>
  <View
    pointerEvents="none"
    style={
      {
        "backgroundColor": "rgba(0,0,0,0.06)",
        "borderColor": "grey",
        "borderRadius": 8,
        "height": 44,
        "position": "absolute",
        "width": "95%",
      }
    }
  />
</View>
`;

exports[`SelectPickerItems with all props should be applied properly: SelectPickerItems with all props. 1`] = `
<View
  pointerEvents="box-none"
  style={
    {
      "alignItems": "center",
      "justifyContent": "center",
    }
  }
  testID="SelectPickerItems"
>
  <RCTScrollView
    CellRendererComponent={[Function]}
    centerContent={true}
    collapsable={false}
    contentContainerStyle={
      {
        "paddingVertical": 120,
      }
    }
    data={
      [
        {
          "color": "red",
          "fontFamily": "Roboto",
          "key": "key1",
          "label": "test1",
          "value": "1",
        },
        {
          "color": "yellow",
          "fontFamily": "SFProText",
          "label": "test2",
          "value": "2",
        },
        {
          "label": "test3",
          "value": "3",
        },
        {
          "label": "test4",
          "value": "4",
        },
        {
          "label": "test5",
          "value": "5",
        },
        {
          "label": "test6",
          "value": "6",
        },
      ]
    }
    decelerationRate={0.98}
    forwardedRef={[Function]}
    getItem={[Function]}
    getItemCount={[Function]}
    getItemLayout={[Function]}
    initialScrollIndex={0}
    jestAnimatedStyle={
      {
        "value": {},
      }
    }
    keyExtractor={[Function]}
    onContentSizeChange={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={1}
    showsVerticalScrollIndicator={false}
    snapToInterval={60}
    stickyHeaderIndices={[]}
    style={
      {
        "height": 300,
        "width": "100%",
      }
    }
    testID="FlatList"
    viewabilityConfigCallbackPairs={[]}
  >
    <View>
      <View
        collapsable={false}
        jestAnimatedStyle={
          {
            "value": {},
          }
        }
        style={{}}
      >
        <View
          accessibilityLabel="testAccessibilityLabel"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "height": 60,
              "justifyContent": "center",
            }
          }
          testID="itemPressable-0"
        >
          <Text
            style={
              {
                "color": "red",
                "fontFamily": "Roboto",
                "fontSize": 24,
              }
            }
            testID="itemText-0"
          >
            test1
          </Text>
        </View>
      </View>
      <View
        collapsable={false}
        jestAnimatedStyle={
          {
            "value": {},
          }
        }
        style={{}}
      >
        <View
          accessibilityLabel="testAccessibilityLabel"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "height": 60,
              "justifyContent": "center",
            }
          }
          testID="itemPressable-1"
        >
          <Text
            style={
              {
                "color": "yellow",
                "fontFamily": "SFProText",
                "fontSize": 24,
              }
            }
            testID="itemText-1"
          >
            test2
          </Text>
        </View>
      </View>
      <View
        collapsable={false}
        jestAnimatedStyle={
          {
            "value": {},
          }
        }
        style={{}}
      >
        <View
          accessibilityLabel="testAccessibilityLabel"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "height": 60,
              "justifyContent": "center",
            }
          }
          testID="itemPressable-2"
        >
          <Text
            style={
              {
                "color": "yellow",
                "fontFamily": "test-font-Regular",
                "fontSize": 24,
              }
            }
            testID="itemText-2"
          >
            test3
          </Text>
        </View>
      </View>
      <View
        collapsable={false}
        jestAnimatedStyle={
          {
            "value": {},
          }
        }
        style={{}}
      >
        <View
          accessibilityLabel="testAccessibilityLabel"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "height": 60,
              "justifyContent": "center",
            }
          }
          testID="itemPressable-3"
        >
          <Text
            style={
              {
                "color": "yellow",
                "fontFamily": "test-font-Regular",
                "fontSize": 24,
              }
            }
            testID="itemText-3"
          >
            test4
          </Text>
        </View>
      </View>
      <View
        collapsable={false}
        jestAnimatedStyle={
          {
            "value": {},
          }
        }
        style={{}}
      >
        <View
          accessibilityLabel="testAccessibilityLabel"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "height": 60,
              "justifyContent": "center",
            }
          }
          testID="itemPressable-4"
        >
          <Text
            style={
              {
                "color": "yellow",
                "fontFamily": "test-font-Regular",
                "fontSize": 24,
              }
            }
            testID="itemText-4"
          >
            test5
          </Text>
        </View>
      </View>
      <View
        collapsable={false}
        jestAnimatedStyle={
          {
            "value": {},
          }
        }
        style={{}}
      >
        <View
          accessibilityLabel="testAccessibilityLabel"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "height": 60,
              "justifyContent": "center",
            }
          }
          testID="itemPressable-5"
        >
          <Text
            style={
              {
                "color": "yellow",
                "fontFamily": "test-font-Regular",
                "fontSize": 24,
              }
            }
            testID="itemText-5"
          >
            test6
          </Text>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <View
    pointerEvents="none"
    style={
      {
        "bottom": 0,
        "height": 150,
        "position": "absolute",
        "width": "100%",
      }
    }
  >
    <Image
      resizeMode="stretch"
      source={1}
      style={
        {
          "height": 150,
          "width": "100%",
        }
      }
    />
  </View>
  <View
    pointerEvents="none"
    style={
      {
        "height": 150,
        "position": "absolute",
        "top": 0,
        "width": "100%",
      }
    }
  >
    <Image
      resizeMode="stretch"
      source={1}
      style={
        {
          "height": 150,
          "width": "100%",
        }
      }
    />
  </View>
  <View
    pointerEvents="none"
    style={
      {
        "backgroundColor": "rgba(0,0,0,0.06)",
        "borderColor": "grey",
        "borderRadius": 8,
        "height": 60,
        "position": "absolute",
        "width": "95%",
      }
    }
    testID="Separator"
  />
</View>
`;
